Closed Bug 1666477 Opened 4 years ago Closed 4 years ago

With session history in parent, tabs do not restore after restart (implement SessionHistoryEntry::AdoptBFCacheEntry)

Categories

(Core :: DOM: Navigation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6b
Tracking Status
firefox83 --- fixed

People

(Reporter: neha, Assigned: smaug)

References

Details

Attachments

(1 file)

With both Fission and session history in parent enabled, some (not all) tabs remain blank wit URL intact after browser restart. They reload fine with a manual reload of page. They are also not specific origins or specific tabs. 2 of my 5 google sheets tabs experienced it and 2 of my 20 pinned tabs too.

Severity: -- → S2
Priority: -- → P1
Summary: With session history in parent, tabs do not restore after restart → With session history in parent, tabs do not restore after restart (implement SessionHistoryEntry::AdoptBFCacheEntry)

There doesn't seem to be need for child side of this, since pushState and same document navigations
should get shared state when committed on parent side.

Assignee: nobody → bugs
Status: NEW → ASSIGNED

Note, I saw some other issue if I had managed to somehow break session store with the broken implementation.
But with a new Firefox profile the patch was working ok.

Please file other bugs when you see them.

Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f90cf4f02ce3
implement SessionHistoryEntry::AdoptBFCacheEntry, r=peterv
Fission Milestone: --- → M6b
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: