Bug 1666477, implement SessionHistoryEntry::AdoptBFCacheEntry, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D91014